--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    apply from: 'buildsystem/dependencies.gradle'
+    apply from: 'buildsystem/version.gradle'
+
     repositories {
         google()
         jcenter()
-        
+
     }
+
+    ext.app = [
+            minSdkVersion    : 19,
+            targetSdkVersion : 28,
+            compileSdkVersion: 28
+    ]
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath gradleDeps.android
+        classpath gradleDeps.kotlin
     }
 }
 
@@ -19,7 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
