--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -6,6 +6,9 @@ def gradle_version = '3.2.1'
 // Kotlin:
 def kotlin_version = '1.3.21'
 
+// Koin:
+def koin_version = '0.9.3'
+
 // Android Support:
 def support_version = '28.0.0'
 def constraint_version = '1.1.3'
@@ -18,6 +21,11 @@ def junit_runner_version = '1.0.2'
 ext.generalDeps = [
         // Kotlin:
         kotlinJdk         : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
+
+        // Koin:
+        koin                     : "org.koin:koin-android:$koin_version",
+        koinAc                   : "org.koin:koin-android-architecture:$koin_version",
+        reflect                  : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
 
         // Android Support:
         supportAnnotations: "com.android.support:support-annotations:$support_version",
