--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion app.compileSdkVersion
@@ -30,6 +32,9 @@ dependencies {
     implementation generalDeps.constraintlayout
 
     implementation generalDeps.kotlinJdk
+    implementation generalDeps.koin
+    implementation generalDeps.koinAc
+    implementation generalDeps.reflect
 
     testImplementation testDeps.junit
 
