--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -9,9 +9,24 @@ def kotlin_version = '1.3.21'
 // Koin:
 def koin_version = '0.9.3'
 
+// Networking:
+def retrofit_version = '2.5.0'
+def okhttp3logginginterceptor_version = '3.10.0'
+def gson_version = '2.8.5'
+def gson_converter_version = '2.5.0'
+
+// Rx
+def rxjava_version = '2.1.17'
+def rxkotlin_version = '2.2.0'
+def rxandroid_version = '2.0.2'
+def rxpreferences_version = '2.0.0'
+
 // Android Support:
 def support_version = '28.0.0'
 def constraint_version = '1.1.3'
+
+// Arch Components:
+def arch_components_version = "1.1.1"
 
 // JUnit:
 def junit_version = '4.12'
@@ -20,21 +35,42 @@ def junit_runner_version = '1.0.2'
 // implementation / api ====
 ext.generalDeps = [
         // Kotlin:
-        kotlinJdk         : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
+        kotlinJdk                : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
 
         // Koin:
         koin                     : "org.koin:koin-android:$koin_version",
         koinAc                   : "org.koin:koin-android-architecture:$koin_version",
         reflect                  : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
 
+        // Rx:
+        rxjava                   : "io.reactivex.rxjava2:rxjava:$rxjava_version",
+        rxkotlin                 : "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version",
+        rxandroid                : "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
+        rxpreferences            : "com.f2prateek.rx.preferences2:rx-preferences:$rxpreferences_version",
+
         // Android Support:
-        supportAnnotations: "com.android.support:support-annotations:$support_version",
+        supportAnnotations       : "com.android.support:support-annotations:$support_version",
 
         // Android Support Views:
-        appcompat         : "com.android.support:appcompat-v7:$support_version",
-        design            : "com.android.support:design:$support_version",
-        constraintlayout  : "com.android.support.constraint:constraint-layout:$constraint_version",
+        appcompat                : "com.android.support:appcompat-v7:$support_version",
+        design                   : "com.android.support:design:$support_version",
+        constraintlayout         : "com.android.support.constraint:constraint-layout:$constraint_version",
+        recyclerview             : "com.android.support:recyclerview-v7:$support_version",
 
+        // Arch Comps:
+        lifecycle                : "android.arch.lifecycle:runtime:$arch_components_version",
+        viewModel                : "android.arch.lifecycle:viewmodel:$arch_components_version",
+        livedata                 : "android.arch.lifecycle:livedata-core:$arch_components_version",
+        archComponents           : "android.arch.core:runtime:$arch_components_version",
+
+        // Retrofit:
+        retrofit                 : "com.squareup.retrofit2:retrofit:$retrofit_version",
+        retrofitRxAdapter        : "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version",
+        retrofitMoshiConverter   : "com.squareup.retrofit2:converter-moshi:$retrofit_version",
+        gsonConverter            : "com.squareup.retrofit2:converter-gson:$gson_converter_version",
+
+        okhttp3LoggingInterceptor: "com.squareup.okhttp3:logging-interceptor:$okhttp3logginginterceptor_version",
+        gson                     : "com.google.code.gson:gson:$gson_version",
 ]
 
 // androidTestImplementation / androidTestApi ====
