Created part twitter in domain layer

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     implementation generalDeps.koin
     implementation generalDeps.reflect
 
+    implementation generalDeps.rxjava
+    implementation generalDeps.supportAnnotations
+
 }
