--- a/buildsystem/information.gradle
+++ b/buildsystem/information.gradle
@@ -3,4 +3,7 @@ ext {
     CONSUMER_KEY = '"M2gfFLA0wvUjkyUGSWEfOvCoO"'
     CONSUMER_SECRET = '"ePQk9Gmd4Dd4tI3SIB5dFNMaTndUv7vycRIQJ5qNf9IWaPoqwX"'
     TWITTER_API = '\"https://api.twitter.com/\"'
+
+    GOOGLE_LANGUAGE_API = '\"https://language.googleapis.com/v1beta2/\"'
+    GOOGLE_LANGUAGE_KEY = '"AIzaSyC8y_x9jNe3LjTcQL3YDHyJUdafNFFqNjc"'
 }
