--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -35,6 +35,10 @@ def junit_runner_version = '1.0.2'
 // Picasso
 def picasso_version = '2.71828'
 
+// Mockito
+def mockito_version = '2.23.0'
+def mockito_kotlin_version = '2.0.0'
+def mockito_inline_version = '2.13.0'
 
 // implementation / api ====
 ext.generalDeps = [
@@ -90,6 +94,11 @@ ext.androidTestDeps = [
 ext.testDeps = [
         // JUnit:
         junit: "junit:junit:$junit_version",
+
+        // Mocks:
+        mockito                  : "org.mockito:mockito-core:$mockito_version",
+        mockitoKotlin            : "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version",
+        mockitoInline            : "org.mockito:mockito-inline:$mockito_inline_version"
 ]
 
 // Gradle dependencies
